Wraped in block user forms elements, fixed container with nav responsive rules. #174

--- a/css/form.css
+++ b/css/form.css
@@ -416,4 +416,7 @@ Styles applied while screen sieze is less than 640px
 		display: inline-block;
 		padding-top: 11px;
 	}
+	.form-single-control input[type="submit"] {
+	margin-left: 0;
+	}
 }
